Bug 856202 - Alert service always cancels in Metro right away. r=wchen