toolkit/components/alerts/nsAlertsService.cpp
@@ -95,10 +95,9 @@ NS_IMETHODIMP nsAlertsService::ShowAlertNotification(const nsAString & aImageUrl
   nsCOMPtr<nsIAlertsService> sysAlerts(do_GetService(NS_SYSTEMALERTSERVICE_CONTRACTID));
   nsresult rv;
   if (sysAlerts) {
-    rv = sysAlerts->ShowAlertNotification(aImageUrl, aAlertTitle, aAlertText, aAlertTextClickable,
-                                          aAlertCookie, aAlertListener, aAlertName,
-                                          aBidi, aLang);
-    NS_ENSURE_SUCCESS(rv, rv);
+    return sysAlerts->ShowAlertNotification(aImageUrl, aAlertTitle, aAlertText, aAlertTextClickable,
+                                            aAlertCookie, aAlertListener, aAlertName,
+                                            aBidi, aLang);
   }
 
   if (!ShouldShowAlert()) {
@@ -132,8 +131,7 @@ NS_IMETHODIMP nsAlertsService::CloseAlert(const nsAString& aAlertName)
   // Try the system notification service.
   nsCOMPtr<nsIAlertsService> sysAlerts(do_GetService(NS_SYSTEMALERTSERVICE_CONTRACTID));
   if (sysAlerts) {
-    nsresult rv = sysAlerts->CloseAlert(aAlertName);
-    NS_ENSURE_SUCCESS(rv, rv);
+    return sysAlerts->CloseAlert(aAlertName);
   }
 
   return mXULAlerts.CloseAlert(aAlertName);
